--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -154,7 +154,7 @@
         <h3>Completá el formulario y nos contactaremos con vos!</h3>
       </div>
       <form action="#" target="_blank">
-        <div class="row justify-content-md-center" style="text-align: left;">
+        <div class="row justify-content-md-center" style="text-align: left;margin-right: 0em;">
           <div>
             <div class=" col-sm-12 col-md-6 col-xl-6">
               <label for="NomYApe">Nombre y Apellido*</label><br>
@@ -172,7 +172,7 @@
               <input type="text" id="Residencia" name="Residencia" required><br>
             </div>
           </div>
-          <div class="row justify-content-md-center" style="text-align: left;">
+          <div class="row justify-content-md-center" style="text-align: left;margin-right: 0em;">
             <div style="margin-right:10em;margin-left:10em;">
               <div class=" col-sm-12 col-md-12 col-xl-12">
                 <label for="exp">¿Tenés experiencia en ventas?*</label><br>
@@ -187,7 +187,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-md-center" style="text-align: left;">
+          <div class="row justify-content-md-center" style="text-align: left;margin-right: 0em;">
             <div style="margin-right:10em;margin-left:10em;">
               <div class=" col-sm-12 col-md-12 col-xl-12">
                 <input type="submit">
