--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Inicio | RE/MAX</title>
@@ -8,12 +9,15 @@
   <link rel="stylesheet" href="assets/styles/slider/simpleSlider.min.css">
   <link rel="stylesheet" href="assets/styles/slider/theme.min.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat Alternates' rel='stylesheet'>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/styles/styleSheetRemax.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
-    <a class="navbar-brand" href="#" style="margin-left: 7em;"><img src="assets/images/TIME%202018%20(RGB).png" width="200px" class="d-inline-block align-top" alt="TIME%202018%20(RGB)" loading="lazy"></a>
+    <a class="navbar-brand" href="#" style="margin-left: 7em;"><img src="assets/images/TIME%202018%20(RGB).png"
+        width="200px" class="d-inline-block align-top" alt="TIME%202018%20(RGB)" loading="lazy"></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -32,7 +36,9 @@
           <a class="nav-link" href="#teams">Nuestro equipo<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100" target="_blank">Propiedades<span class="sr-only">(current)</span></a>
+          <a class="nav-link"
+            href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100"
+            target="_blank">Propiedades<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#encontranos">Encontranos<span class="sr-only">(current)</span></a>
@@ -59,34 +65,41 @@
     <div class="row justify-content-md-centerx" id="Encontranos" style="margin:0em">
       <div class="col-sm-12 col-md-6 col-xl-6" style="background-color: rgba(138, 202, 255, 1); padding:0">
         <div class="col-12">
-          <h1 id="quienes">Por qué<img src="assets/images/REMAX%20-%20RGB-01.png" style="width:200px;padding-left: 0.5em;" alt="REMAX%20-%20RGB-01">?</h1>
+          <h1 id="quienes">Por qué<img src="assets/images/REMAX%20-%20RGB-01.png"
+              style="width:200px;padding-left: 0.5em;" alt="REMAX%20-%20RGB-01">?</h1>
         </div>
         <div class="col-12">
-          <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la Argentina desde el año 2006.</h2>
+          <h2>RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la Argentina desde el año
+            2006.</h2>
         </div>
         <div class="col-12">
           <h2>Es una empresa dinámica que está transitando un momento de expansión.</h2>
         </div>
         <div class="col-12">
-          <h2>RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más altas comisiones del mercado.</h2>
+          <h2>RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más altas comisiones del
+            mercado.</h2>
         </div>
         <div class="col-12">
           <h2 style="margin-bottom:4.5em">Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y Uruguay.</h2>
         </div>
       </div>
       <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
-        <div class="col-12"><img src="assets/images/REMAX_mastrBalloon_RGB_R-01.png" class="globo" alt="REMAX_mastrBalloon_RGB_R-01"></div>
-        <div class="col-12" style="padding:0"><img src="assets/images/porqueRemax.jpg" height="468px" class="bottom" alt="porqueRemax"></div>
+        <div class="col-12"><img src="assets/images/REMAX_mastrBalloon_RGB_R-01.png" class="globo"
+            alt="REMAX_mastrBalloon_RGB_R-01"></div>
+        <div class="col-12" style="padding:0"><img src="assets/images/porqueRemax.jpg" height="468px" class="bottom"
+            alt="porqueRemax"></div>
       </div>
     </div>
   </section>
   <section class="propuesta" id="propuesta">
     <div class="row justify-content-md-center" style="margin:0">
       <div class="col-12" style="padding:0;margin:0">
-        <h1><span>Por qué<img src="assets/images/REMAXTIME.png" style="width:300px;padding:0.4em;" alt="REMAXTIME">?</span></h1>
+        <h1><span>Por qué<img src="assets/images/REMAXTIME.png" style="width:300px;padding:0.4em;"
+              alt="REMAXTIME">?</span></h1>
       </div>
       <div class="container" style="padding-bottom: 1.5em;">
-        <div class="row justify-content-md-center" id="containerPropuesta" style="margin-left:4em;margin-right:4em"></div>
+        <div class="row justify-content-md-center" id="containerPropuesta" style="margin-left:4em;margin-right:4em">
+        </div>
       </div>
     </div>
   </section>
@@ -109,35 +122,31 @@
         <h3>Completá el formulario y nos contactaremos con vos!</h3>
       </div>
       <form action="#" target="_blank">
-        <div class="row justify-content-md-center" style="text-align: left;margin-right: 0em;">
-          <div>
-            <div class="col-xl-6 col-md-6 col-sm-12">
-              <label for="NomYApe">Nombre y Apellido*</label><br>
-              <input type="text" id="NomYApe" name="NomYApe" required=""><br>
-              <label for="email">Email*</label><br>
-              <input type="email" id="email" name="email" required=""><br>
-              <label for="Teléfono">Teléfono*</label><br>
-              <input type="tel" id="Teléfono" name="Teléfono" placeholder="011-XXXX-XXXX" required=""><br>
-            </div>
-            <div class="col-sm-12 col-md-6 col-xl-6">
-              <label for="edad">Edad*</label><br>
-              <input type="number" id="edad" name="edad" required=""><br>
-              <label for="Residencia">Lugar de Residencia*</label><br>
-              <input type="text" id="Residencia" name="Residencia" required=""><br>
-            </div>
+        <div class="row justify-content-md-center" style="text-align: left">
+          <div class="col-xl-6 col-md-6 col-sm-12">
+            <label for="NomYApe">Nombre y Apellido*</label><br>
+            <input type="text" id="NomYApe" name="NomYApe" required=""><br>
+            <label for="email">Email*</label><br>
+            <input type="email" id="email" name="email" required=""><br>
+            <label for="Teléfono">Teléfono*</label><br>
+            <input type="tel" id="Teléfono" name="Teléfono" placeholder="011-XXXX-XXXX" required=""><br>
           </div>
-          <div>
-            <div style="margin-right:10em;margin-left:10em;">
-              <div class="col-sm-12 col-md-12 col-xl-12">
-                <label for="exp">¿Tenés experiencia en ventas?*</label><br>
-                <input style="width: 630px;" type="text" id="exp" name="exp" required=""><br>
-                <label for="independiente">¿Te animas a trabajar en forma independiente y sin ingresos fijos?</label><br>
-                <input style="width: 630px;" type="text" id="independiente" name="independiente" required=""><br>
-                <label for="teamwork">¿Te gusta trabajar en en equipo?*</label><br>
-                <input style="width: 630px;" type="text" id="teamwork" name="teamwork" required=""><br>
-                <label for="teamwork">¿Cuántas horas diarias podes dedicarle al proyecto Re/Max?*</label><br>
-                <input style="width: 630px;" type="time" id="horas" name="horas" required=""><br>
-              </div>
+          <div class="col-sm-12 col-md-6 col-xl-6">
+            <label for="edad">Edad*</label><br>
+            <input type="number" id="edad" name="edad" required=""><br>
+            <label for="Residencia">Lugar de Residencia*</label><br>
+            <input type="text" id="Residencia" name="Residencia" required=""><br>
+          </div>
+          <div style="margin-right:10em;margin-left:10em;">
+            <div class="col-sm-12 col-md-12 col-xl-12">
+              <label for="exp">¿Tenés experiencia en ventas?*</label><br>
+              <input style="width: 630px;" type="text" id="exp" name="exp" required=""><br>
+              <label for="independiente">¿Te animas a trabajar en forma independiente y sin ingresos fijos?</label><br>
+              <input style="width: 630px;" type="text" id="independiente" name="independiente" required=""><br>
+              <label for="teamwork">¿Te gusta trabajar en en equipo?*</label><br>
+              <input style="width: 630px;" type="text" id="teamwork" name="teamwork" required=""><br>
+              <label for="teamwork">¿Cuántas horas diarias podes dedicarle al proyecto Re/Max?*</label><br>
+              <input style="width: 630px;" type="time" id="horas" name="horas" required=""><br>
             </div>
           </div>
           <div>
@@ -151,32 +160,45 @@
       </form>
     </div>
   </section>
+
   <footer>
-    <div class="row" id="encontranos" style="margin:0em">
+    <div class="container" >
       <div class="encontranos">
-        <div class="col-sm-12 col-md-6 col-xl-6">
-          <div>
+        <div class="row justify-content-md-center" style="text-align: left" style="margin: 0em;padding: 0em;">
+          <div class="col-xl-6 col-md-6 col-sm-12">
             <img src="assets/images/footer.webp" alt="footer">
             <p><span class="bolder">DIRECCIÓN:</span> <span>Camargo 537, Villa Crespo, CABA.</span></p>
             <p><span class="bolder">TELÉFONO:</span> <span>4858-3090</span></p>
             <p><span class="bolder">MAIL:</span> <span><a href="mailto:time@remax.com.ar">time@remax.com.ar</a></span></p>
             <div style="margin-right: 10em;">
-              <p><span class="legal">En cumplimiento de las normas legales aplicables, informamos que los Agentes NO ejercen el Corretaje Inmobiliario. Todas las Operaciones Inmobiliarias son concluídas por los Corredores Matriculados responsables en cada oficina</span></p>
+              <p><span class="legal">En cumplimiento de las normas legales aplicables, informamos que los Agentes NO
+                  ejercen el Corretaje Inmobiliario. Todas las Operaciones Inmobiliarias son concluídas por los
+                  Corredores Matriculados responsables en cada oficina</span></p>
             </div>
             <p><span class="legal"><span class="last">José David Winer | CUCICBA 6346 | CMCPSI 6433</span></span></p>
+          </div> 
+          <div class="col-sm-12 col-md-6 col-xl-6">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1236981470406!2d-58.441577166516346!3d-34.60103344727378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbc146e0e5fd%3A0xbd2cb76b26109626!2sRemax%20Time!5e0!3m2!1ses-419!2sar!4v1601174158097!5m2!1ses-419!2sar"
+              width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="yes" aria-hidden="false"
+              tabindex="0"></iframe>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-xl-6" style="height:100%">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1236981470406!2d-58.441577166516346!3d-34.60103344727378!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbc146e0e5fd%3A0xbd2cb76b26109626!2sRemax%20Time!5e0!3m2!1ses-419!2sar!4v1601174158097!5m2!1ses-419!2sar" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="yes" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
-  <script src="assets/scripts/simpleSlider.min.js"></script> 
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="assets/scripts/simpleSlider.min.js"></script>
   <script>
 
 
@@ -186,7 +208,8 @@
         delay: 2000
       });
     })
-  </script> 
+  </script>
   <script src='assets/scripts/main.js'></script>
 </body>
+
 </html>
