--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -86,7 +86,7 @@
       <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0;">
         <div class="col-12"><img src="assets/images/REMAX_mastrBalloon_RGB_R-01.png" class="globo"
             alt="REMAX_mastrBalloon_RGB_R-01"></div>
-        <div class="col-12" style="padding:0"><img src="assets/images/porqueRemax.jpg" height="468px" class="bottom"
+        <div class="col-12" style="padding:0"><img src="assets/images/porqueRemax.jpg" width="100%" class="bottom"
             alt="porqueRemax"></div>
       </div>
     </div>
@@ -109,12 +109,14 @@
       <div class="row justify-content-md-center" id="containerValores" style="margin-left:4em;margin-right:4em"></div>
     </div>
   </section>
+
   <section class="teams" id="teams">
     <h1><span>NUESTRO EQUIPO</span></h1>
     <div class="container">
       <div class="row justify-content-md-center" id="containerAgent" style="margin-left:4em;margin-right:4em"></div>
     </div>
   </section>
+
   <section class="postulate">
     <div class="container">
       <div class="">
@@ -122,8 +124,8 @@
         <h3>Completá el formulario y nos contactaremos con vos!</h3>
       </div>
       <form action="#" target="_blank">
-        <div class="row justify-content-md-center" style="text-align: left">
-          <div class="col-xl-6 col-md-6 col-sm-12">
+        <div class="row justify-content-md-center" style="text-align: left" style="margin: 0em;padding: 0em;">
+          <div class="col-xl-6 col-md-6 col-sm-12" style="margin: 0em;padding: 0em;">
             <label for="NomYApe">Nombre y Apellido*</label><br>
             <input type="text" id="NomYApe" name="NomYApe" required=""><br>
             <label for="email">Email*</label><br>
@@ -160,7 +162,6 @@
       </form>
     </div>
   </section>
-
   <footer>
     <div class="container" >
       <div class="encontranos">
