--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white">
-    <a class="navbar-brand" href="#" style="margin-left: 7em"><img src="assets/images/TIME%202018%20(RGB).png"
-        width="200px" class="d-inline-block align-top" alt="TIME%202018%20(RGB)" loading="lazy" /></a>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
+    <a class="navbar-brand" href="#"><img src="assets/images/TIME%202018%20(RGB).png" width="200px"
+        class="d-inline-block align-top" alt="TIME%202018%20(RGB)" loading="lazy" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -81,12 +81,11 @@
   </div>
 
   <section class="porque" id="porque">
-    <div class="row justify-content-md-centerx" id="Encontranos" style="margin: 0em">
+    <div class="row justify-content-md-centerx" style="margin: 0em">
       <div class="col-sm-12 col-md-6 col-xl-6" style="background-color: rgba(138, 202, 255, 1); padding: 0">
         <div class="col-12">
           <h1 id="quienes">
-            Por qué<img src="assets/images/REMAX%20-%20RGB-01.png" style="width: 200px; padding-left: 0.5em"
-              alt="REMAX%20-%20RGB-01" />?
+            Por qué<img src="assets/images/REMAX%20-%20RGB-01.png" class="imgPq" alt="REMAX%20-%20RGB-01" />?
           </h1>
         </div>
         <div class="col-12">
@@ -115,13 +114,14 @@
         </div>
       </div>
       <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0">
-        <div class="col-12">
+        <div class="col-12  .d-sm-none .d-md-block ">
           <img src="assets/images/REMAX_mastrBalloon_RGB_R-01.png" class="globo" alt="REMAX_mastrBalloon_RGB_R-01" />
         </div>
         <div class="col-12" style="padding: 0">
           <img src="assets/images/porqueRemax.jpg" width="100%" class="bottom" alt="porqueRemax" />
         </div>
       </div>
+
     </div>
   </section>
   <section class="propuesta" id="propuesta">
