Media query En JS y CSS terminado para propuesta (4/9)

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -114,30 +114,25 @@
         </div>
       </div>
       <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0">
-        <div class="col-12  .d-sm-none .d-md-block ">
+        <div class="col-12">
           <img src="assets/images/REMAX_mastrBalloon_RGB_R-01.png" class="globo" alt="REMAX_mastrBalloon_RGB_R-01" />
         </div>
         <div class="col-12" style="padding: 0">
           <img src="assets/images/porqueRemax.jpg" width="100%" class="bottom" alt="porqueRemax" />
         </div>
       </div>
+  </section>
 
-    </div>
-  </section>
   <section class="propuesta" id="propuesta">
-    <div class="row justify-content-md-center" style="margin: 0">
-      <div class="col-12" style="padding: 0; margin: 0">
-        <h1>
-          <span>Por qué<img src="assets/images/REMAXTIME.png" style="width: 300px; padding: 0.4em"
-              alt="REMAXTIME" />?</span>
-        </h1>
-      </div>
-      <div class="container" style="padding-bottom: 1.5em">
-        <div class="row justify-content-md-center" id="containerPropuesta" style="margin-left: 4em; margin-right: 4em">
-        </div>
-      </div>
+    <h1>
+      <span>Por qué<img src="assets/images/REMAXTIME.png" style="width: 300px; padding: 0.4em"
+          alt="REMAXTIME" />?</span>
+    </h1>
+    <div class="container">
+      <div class="row justify-content-md-center" id="containerPropuesta"></div>
     </div>
   </section>
+
   <section class="perfil" id="perfil">
     <h1><span>PERFIL DEL AGENTE</span></h1>
     <div class="container">
