Medua qy=uery agentes y formulario listo(Funcion constructora simple y compleja segun el mdia query listener). 7/9 media querys listos

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -129,14 +129,14 @@
           alt="REMAXTIME" />?</span>
     </h1>
     <div class="container">
-      <div class="row justify-content-md-center" id="containerPropuesta"></div>
+      <div class="row justify-content-center" id="containerPropuesta"></div>
     </div>
   </section>
 
   <section class="perfil" id="perfil">
     <h1><span>PERFIL DEL AGENTE</span></h1>
     <div class="container">
-      <div class="row justify-content-md-center" id="containerValores" style="margin-left: 4em; margin-right: 4em">
+      <div class="row justify-content-center" id="containerValores" style="margin-left: 4em; margin-right: 4em">
       </div>
     </div>
   </section>
@@ -144,7 +144,7 @@
   <section class="teams" id="teams">
     <h1><span>NUESTRO EQUIPO</span></h1>
     <div class="container">
-      <div class="row justify-content-md-center" id="containerAgent" style="margin-left: 4em; margin-right: 4em"></div>
+      <div class="row justify-content-center" id="containerAgent" style="margin-left: 4em; margin-right: 4em"></div>
     </div>
   </section>
 
