Media query terminado a mis ojos xdxd

--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -157,7 +157,7 @@
       <div class="row" style="justify-content: center">
         <div class="col-lg-7 col-md-8">
           <form action="#" target="_blank">
-            <div class="row justify-content-md-center" style="text-align: left; margin-right: 0em">
+            <div class="row justify-content-center" style="text-align: left; margin-right: 0em">
               <div class="form-group col-md-6">
                 <label for="NomYApe">Nombre y Apellido*</label>
                 <input type="text" id="NomYApe" name="NomYApe" required="" />
@@ -203,8 +203,8 @@
                 <input class="large" type="time" id="horas" name="horas" required="" />
               </div>
               <div>
-                <div style="margin-right: 10em; margin-left: 10em">
-                  <div class="col-sm-12 col-md-12 col-xl-12">
+                <div>
+                  <div class="col-sm-12 col-md-12 col-xl-12 ">
                     <input type="submit" value="Enviar" />
                   </div>
                 </div>
@@ -229,7 +229,7 @@
             <span class="bolder">MAIL:</span>
             <a href="mailto:time@remax.com.ar">time@remax.com.ar</a>
           </p>
-          <div style="margin-right: 10em">
+          <div class="footerP">
             <p>
               <span class="legal">En cumplimiento de las normas legales aplicables, informamos
                 que los Agentes NO ejercen el Corretaje Inmobiliario. Todas
