--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
-    <a class="navbar-brand" href="#"><img src="assets/images/TIME%202018%20(RGB).png" width="200px"
+    <a class="navbar-brand" href="#"><img src="assets/images/TIME%202018%20(RGB).png" width="148px"
         class="d-inline-block align-top" alt="TIME%202018%20(RGB)" loading="lazy" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,12 +80,12 @@
     <!-- /Slider -->
   </div>
 
-  <section class="porque" id="porque">
+  <section class="porque" id="quienes">
     <div class="row justify-content-md-centerx" style="margin: 0em">
       <div class="col-sm-12 col-md-6 col-xl-6" style="background-color: rgba(138, 202, 255, 1); padding: 0">
         <div class="col-12">
-          <h1 id="quienes">
-            Por qué<img src="assets/images/REMAX%20-%20RGB-01.png" class="imgPq" alt="REMAX%20-%20RGB-01" />?
+          <h1>
+            Por qué <img src="assets/images/REMAX%20-%20RGB-01.png" class="imgPq" alt="REMAX%20-%20RGB-01" /> ?
           </h1>
         </div>
         <div class="col-12">
