--- a/Pagina remax/index.html
+++ b/Pagina remax/index.html
@@ -125,8 +125,8 @@
 
   <section class="propuesta" id="propuesta">
     <h1>
-      <span>Por qué<img src="assets/images/REMAXTIME.png" style="width: 300px; padding: 0.4em"
-          alt="REMAXTIME" />?</span>
+      <span>Por qué <img src="assets/images/REMAXTIME.png" class="Pqprop"
+          alt="REMAXTIME" /> ?</span>
     </h1>
     <div class="container">
       <div class="row justify-content-center" id="containerPropuesta"></div>
