--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="assets/images/slideShow/1.jpg" class="sliderimg" alt="1" />
       </div>
       <div class="slider-slide">
-        <img src="assets/images/slideShow/2.png" class="sliderimg" alt="2" />
+        <img src="assets/images/slideShow/2.jpg" class="sliderimg" alt="2" />
       </div>
       <div class="slider-slide">
         <img src="assets/images/slideShow/3.png" class="sliderimg" alt="3" />
