items header ml-auto, imagen pq bottom not stretched

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
         </li>
@@ -45,7 +45,7 @@
             href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100"
             target="_blank">Propiedades<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item float-right">
           <a class="nav-link" href="#encontranos">Encontranos<span class="sr-only">(current)</span></a>
         </li>
       </ul>
@@ -81,7 +81,7 @@
   </div>
 
   <section class="porque" id="quienes">
-    <div class="row justify-content-md-centerx" style="margin: 0em">
+    <div class="row justify-content-center" style="margin: 0em">
       <div class="col-sm-12 col-md-6 col-xl-6" style="background-color: rgba(138, 202, 255, 1); padding: 0">
         <div class="col-12">
           <h1>
@@ -114,6 +114,7 @@
         </div>
       </div>
       <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0">
+        <div class="row justify-content-center" style="margin: 0em">
         <div class="col-12">
           <img src="assets/images/REMAX_mastrBalloon_RGB_R-01.png" class="globo" alt="REMAX_mastrBalloon_RGB_R-01" />
         </div>
@@ -121,12 +122,13 @@
           <img src="assets/images/porqueRemax.jpg" width="100%" class="bottom" alt="porqueRemax" />
         </div>
       </div>
+      </div>
+    </div>
   </section>
 
   <section class="propuesta" id="propuesta">
     <h1>
-      <span>Por qué <img src="assets/images/REMAXTIME.png" class="Pqprop"
-          alt="REMAXTIME" /> ?</span>
+      <span>Por qué <img src="assets/images/REMAXTIME.png" class="Pqprop" alt="REMAXTIME" /> ?</span>
     </h1>
     <div class="container">
       <div class="row justify-content-center" id="containerPropuesta"></div>
@@ -215,7 +217,7 @@
       </div>
     </div>
   </section>
-  <footer style="padding-bottom:4vw;">
+  <footer style="padding-bottom:4vw;" id="encontranos">
     <div class="container">
       <div class="encontranos row">
         <div class="izquierda col-xl-6 col-md-12">
