--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
                     <a class="nav-link" href="#propuesta">Propuesta<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#perfil">Perfil<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#perfil">Perfil del Agente<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#teams">Nuestro equipo<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.remax.com.ar/es-ar/oficinas/capital-federal/villa-crespo/remax-time/42100" target="_blank">Propiedades<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item float-right">
+                    <a class="nav-link" href="#postulate">Postuláte<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item float-right">
                     <a class="nav-link" href="#encontranos">Encontranos<span class="sr-only">(current)</span></a>
@@ -121,8 +124,12 @@
         <h1>
             <span>Por qué <img src="assets/images/REMAXTIME.png" class="Pqprop" alt="REMAXTIME" /> ?</span>
         </h1>
-        <div class="container">
-            <div class="row justify-content-center" id="containerPropuesta"></div>
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <div class="container">
+                    <div class="row justify-content-center" id="containerPropuesta"></div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -141,7 +148,7 @@
         </div>
     </section>
 
-    <section class="postulate" style="padding-bottom:4vw;">
+    <section class="postulate" style="padding-bottom:4vw;" id="postulate">
         <div class="container">
             <div>
                 <h1><span>POSTULATE</span></h1>
