--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" style="margin-right: 3rem;" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
@@ -86,25 +86,33 @@
                         Por qué <img src="assets/images/REMAX%20-%20RGB-01.png" class="imgPq" alt="REMAX%20-%20RGB-01" /> ?
                     </h1>
                 </div>
-                <div class="col-12">
-                    <h2>
-                        RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la Argentina desde el año 2006.
-                    </h2>
-                </div>
-                <div class="col-12">
-                    <h2>
-                        Es una empresa dinámica que está transitando un momento de expansión.
-                    </h2>
-                </div>
-                <div class="col-12">
-                    <h2>
-                        RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más altas comisiones del mercado.
-                    </h2>
-                </div>
-                <div class="col-12">
-                    <h2 style="margin-bottom: 4.5em">
-                        Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y Uruguay.
-                    </h2>
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-12">
+                                    <h2>
+                                        RE/MAX es la Empresa de Servicios Inmobiliarios más grande del mundo y opera en la Argentina desde el año 2006.
+                                    </h2>
+                                </div>
+                                <div class="col-12">
+                                    <h2>
+                                        Es una empresa dinámica que está transitando un momento de expansión.
+                                    </h2>
+                                </div>
+                                <div class="col-12">
+                                    <h2>
+                                        RE/MAX ha revolucionado el mundo inmobiliario ofreciendo capacitación y las más altas comisiones del mercado.
+                                    </h2>
+                                </div>
+                                <div class="col-12">
+                                    <h2 style="margin-bottom: 4.5em">
+                                        Hoy en día cuenta con 150 oficinas desarrolladas en Argentina y Uruguay.
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-xl-6" style="padding: 0">
